--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,12 +18,12 @@ layout: compress
 
     {{ content }}
 
-    <div class="page__footer">
-      <footer>
-        {% include footer/custom.html %}
-        {% include footer.html %}
-      </footer>
-    </div>
+	{% comment %} <div class="page__footer"> {% endcomment %}
+    {% comment %}   <footer> {% endcomment %}
+    {% comment %}     {% include footer/custom.html %} {% endcomment %}
+    {% comment %}     {% include footer.html %} {% endcomment %}
+    {% comment %}   </footer> {% endcomment %}
+    {% comment %} </div> {% endcomment %}
 
     {% include scripts.html %}
 
