--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,12 +18,12 @@ layout: compress
 
     {{ content }}
 
-	{% comment %} <div class="page__footer"> {% endcomment %}
-    {% comment %}   <footer> {% endcomment %}
+	<div class="page__footer">
+		<footer> 
     {% comment %}     {% include footer/custom.html %} {% endcomment %}
-    {% comment %}     {% include footer.html %} {% endcomment %}
-    {% comment %}   </footer> {% endcomment %}
-    {% comment %} </div> {% endcomment %}
+			{% include footer.html %}
+		</footer>
+    </div> 
 
     {% include scripts.html %}
 
