--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,18 +14,16 @@ layout: compress
   <body>
 
     {% include browser-upgrade.html %}
-    {% include masthead.html %}
-
     {{ content }}
 
-	<div class="page__footer">
-		<footer> 
-    {% comment %}     {% include footer/custom.html %} {% endcomment %}
-			{% comment %}{% include footer.html %}{% endcomment %}
-		</footer>
-    </div> 
 
-    {% include scripts.html %}
+    <div class="page__footer">
+      <footer>
+        {% include footer.html %}
+      </footer>
+    </div>
+
+
 
   </body>
 </html>
