--- a/_includes/news.html
+++ b/_includes/news.html
@@ -1,8 +1,9 @@
 <div class="news">
   <ul>
-    <li><b>03.12.2021</b> I will be starting my own research group within the 3AI project of  <a href="https://hessian.ai" target="_blank">hessian.ai</a> at TU Darmstadt.</li>
-    <li><b>28.09.2021</b> Our paper on fast axiomatic attribution for neural networks has been accepted at NeurIPS '21.</li>
-    <li><b>28.09.2021</b> Our paper on unsupervised learning for video object segmentation has been accepted at NeurIPS '21.</li>
-    <li><b>20.05.2020</b> I will be joining the <a href="https://www.visinf.tu-darmstadt.de/" target="_blank">Visual Inference Lab</a>, led by Prof. Stefan Roth, at TU Darmstadt as a postdoc starting September 2020.</li>
+    <li><b>10.2022</b> Two papers accepted at BMVC 2022. More details will follow.</li>
+    <li><b>12.2021</b> I will be starting my own research group within the 3AI project of  <a href="https://hessian.ai" target="_blank">hessian.ai</a> at TU Darmstadt.</li>
+    <li><b>09.2021</b> Our paper on fast axiomatic attribution for neural networks has been accepted at NeurIPS '21.</li>
+    <li><b>09.2021</b> Our paper on unsupervised learning for video object segmentation has been accepted at NeurIPS '21.</li>
+    <li><b>05.2020</b> I will be joining the <a href="https://www.visinf.tu-darmstadt.de/" target="_blank">Visual Inference Lab</a>, led by Prof. Stefan Roth, at TU Darmstadt as a postdoc starting September 2020.</li>
   </ul>
 </div>
