--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -30,16 +30,16 @@
     {% if post.date %}{{ post.date | default: "1900-01-01" | date: "%Y" }}{% endif %}	
 	{% if post.oral%}<font color="red"> &nbsp; (Oral Presentation)</font> {% endif %}
     <br> 
-    [{% if post.pdf%} <a href="{{ post.pdf }}">PDF</a>{% endif %}
-	 {% if post.openpdf%} <a href="{{ post.openpdf }}">PDF</a>{% endif %}
+    [{% if post.pdf%} <a href="{{ post.pdf }}">Paper</a>{% endif %}
+	 {% if post.openpdf%} <a href="{{ post.openpdf }}">Paper</a>{% endif %}
 	 {% if post.supp%} | <a href="{{ post.supp }}">Supplement</a> {% endif %}
 	 {% if post.videoresults%} | <a href="{{ post.videoresults }}">Video</a>{% endif %} 	 
 	 {% if post.arxiv%} | <a href="{{ post.arxiv }}">Preprint</a> {% endif %} 	 
 	 {% if post.bibtex%} | <a href="{{ post.bibtex }}">BibTex</a>{% endif %}		 
 	 {% if post.imageresults%} | <a href="{{ post.imageresults }}">Results</a>{% endif %} 	 	 
-	 {% if post.videotalk%} | <a href="{{ post.videotalk }}">Talk</a>{% endif %}	 
+	 {% if post.videotalk%} | <a href="{{ post.videotalk }}">Talk video</a>{% endif %}	 
 	 {% if post.poster%} | <a href="{{ post.poster }}">Poster</a>{% endif %}
-	 {% if post.project%} | <a href="{{ post.project }}">Project Page</a>{% endif %} 	 
+	 {% if post.project%} | <a href="{{ post.project }}">Project page</a>{% endif %} 	 
 	 {% if post.code%} | <a href="{{ post.code }}">Code</a> {% endif %} 
     ]    
     </p>
