--- a/_includes/news.html
+++ b/_includes/news.html
@@ -1,7 +1,7 @@
 <div class="news">
   <ul>
   	<li><b>04.2023</b> Our paper "Entropy-driven Unsupervised Keypoint Representation Learning in Videos" has been accepted at <a href="https://icml.cc/Conferences/2023" target="_blank">ICML'23</a> .</li>
-	<li><b>04.2023</b> One accepted paper at CVPRW 2023. Looking forward to Vancouver.</li>
+	<li><b>04.2023</b> Our paper <a href="https://arxiv.org/abs/2305.09504" target="_blank">"Content-Adaptive Downsampling in Convolutional Neural Networks"</a> has been accepted at <a href="https://sites.google.com/view/ecv23/home" target="_blank">CVPRW 2023</a>. Looking forward to Vancouver.</li>
     <li><b>10.2022</b> Two papers accepted at BMVC 2022. Details below.</li>
     <li><b>12.2021</b> I will be starting my own research group within the 3AI project of  <a href="https://hessian.ai" target="_blank">hessian.ai</a> at TU Darmstadt.</li>
     <li><b>09.2021</b> Our paper on fast axiomatic attribution for neural networks has been accepted at NeurIPS '21.</li>
