--- a/_includes/news.html
+++ b/_includes/news.html
@@ -1,11 +1,14 @@
 <div class="news">
   <ul>
+    <li><b>07.2023</b> One paper accepted at <a href="https://iccv2023.thecvf.com" target="_blank">ICCV'23</a>. More details soon.</li>
+	<li><b>07.2023</b> I am looking forward to attend and present our work on "Unsupervised Representation Learning from Videos" and "Accelerating and Assessing Explainable AI Methods in Computer Vision" at the <a href="https://ellisunconference2023.github.io/" target="_blank">2nd ELLIS unConference</a> in Paris.</li>
   	<li><b>04.2023</b> Our paper "Entropy-driven Unsupervised Keypoint Representation Learning in Videos" has been accepted at <a href="https://icml.cc/Conferences/2023" target="_blank">ICML'23</a> .</li>
 	<li><b>04.2023</b> Our paper <a href="https://arxiv.org/abs/2305.09504" target="_blank">"Content-Adaptive Downsampling in Convolutional Neural Networks"</a> has been accepted at <a href="https://sites.google.com/view/ecv23/home" target="_blank">CVPRW 2023</a>. Looking forward to Vancouver.</li>
     <li><b>10.2022</b> Two papers accepted at BMVC 2022. Details below.</li>
     <li><b>12.2021</b> I will be starting my own research group within the 3AI project of  <a href="https://hessian.ai" target="_blank">hessian.ai</a> at TU Darmstadt.</li>
-    <li><b>09.2021</b> Our paper on fast axiomatic attribution for neural networks has been accepted at NeurIPS '21.</li>
+    <!-- 
+	<li><b>09.2021</b> Our paper on fast axiomatic attribution for neural networks has been accepted at NeurIPS '21.</li>
     <li><b>09.2021</b> Our paper on unsupervised learning for video object segmentation has been accepted at NeurIPS'21.</li>
-    <comment><li><b>05.2020</b> I will be joining the <a href="https://www.visinf.tu-darmstadt.de/" target="_blank">Visual Inference Lab</a>, led by Prof. Stefan Roth, at TU Darmstadt as a postdoc starting September 2020.</li></comment>
+    <li><b>05.2020</b> I will be joining the <a href="https://www.visinf.tu-darmstadt.de/" target="_blank">Visual Inference Lab</a>, led by Prof. Stefan Roth, at TU Darmstadt as a postdoc starting September 2020.</li>-->
   </ul>
 </div>
