--- a/_includes/news.html
+++ b/_includes/news.html
@@ -1,14 +1,16 @@
 <div class="news">
   <ul>
-   	<li><b>10.2024</b> [Hiring] I am accepting applications for a open PhD position through ELLIS: <a href="https://ellis.eu/news/ellis-phd-program-call-for-applications-2024" target="_blank">Link to application instructions</a></li>
+  	<li><b>03.2025</b> Our paper <a href="https://arxiv.org/pdf/2407.17929" target="_blank">"Guided Latent Slot Diffusion for Object-Centric Learning"</a>  has been accepted at <a href="https://cvpr2023.thecvf.com/Conferences/2025" target="_blank">CVPR'25</a>.</li> 
+	<li><b>02.2025</b> I started as assistant professor at the Technical University of Darmstadt.</a></li>
 	<li><b>09.2024</b> Our paper <a href="https://arxiv.org/abs/2407.11910" target="_blank">"Benchmarking the Attribution Quality of Vision Models"</a>  has been accepted at <a href="https://neurips.cc/Conferences/2024" target="_blank">NeurIPS'24</a> Datasets and Benchmarks Track.</li> 
     <li><b>04.2024</b> Our workshop on <a href="https://excv-workshop.github.io/" target="_blank">Explainable Computer Vision: Where are We and Where are We Going?</a> got accepted at ECCV 2024.</li>  
     <li><b>01.2024</b> I got accepted into the prestigious <a href="https://www.dfg.de/en/research-funding/funding-opportunities/programmes/individual/emmy-noether" target="_blank">Emmy Noether Programme</a>. More details soon.</li>
-	<li><b>01.2024</b> I got appointed as <a href="https://www.informatik.tu-darmstadt.de/fb20/ueber_uns_details_295168.en.jsp" target="_blank">independent research group leader</a> at TU Darmstadt.</li>
+	<li><b>01.2024</b> I got appointed as independent research group leader at TU Darmstadt.</li>
     <li><b>08.2023</b> Our paper on <a href="https://github.com/visinf/funnybirds-framework" target="_blank">evaluating explainable AI methods</a> has been accepted at <a href="https://iccv2023.thecvf.com" target="_blank">ICCV'23</a> as oral presentation. </li>
-	<li><b>07.2023</b> I am looking forward to attend and present our work on "Unsupervised Representation Learning from Videos" and "Accelerating and Assessing Explainable AI Methods in Computer Vision" at the <a href="https://ellisunconference2023.github.io/" target="_blank">2nd ELLIS unConference</a> in Paris.</li>
-  	<li><b>04.2023</b> Our paper <a href="https://sites.google.com/view/mint-kp" target="_blank">"Entropy-driven Unsupervised Keypoint Representation Learning in Videos"</a>  has been accepted at <a href="https://icml.cc/Conferences/2023" target="_blank">ICML'23</a> .</li>
 	<!-- 
+	<li><b>10.2024</b> [Hiring] I am accepting applications for a open PhD position through ELLIS: <a href="https://ellis.eu/news/ellis-phd-program-call-for-applications-2024" target="_blank">Link to application instructions</a></li>
+	<li><b>07.2023</b> I am looking forward to attend and present our work on "Unsupervised Representation Learning from Videos" and "Accelerating and Assessing Explainable AI Methods in Computer Vision" at the <a href="https://ellisunconference2023.github.io/" target="_blank">2nd ELLIS unConference</a> in Paris.</li>
+  	<li><b>04.2023</b> Our paper <a href="https://sites.google.com/view/mint-kp" target="_blank">"Entropy-driven Unsupervised Keypoint Representation Learning in Videos"</a>  has been accepted at <a href="https://icml.cc/Conferences/2023" target="_blank">ICML'23</a> .</li>	
 	<li><b>04.2023</b> Our paper <a href="https://arxiv.org/abs/2305.09504" target="_blank">"Content-Adaptive Downsampling in Convolutional Neural Networks"</a> has been accepted at <a href="https://sites.google.com/view/ecv23/home" target="_blank">CVPRW 2023</a>. Looking forward to Vancouver.</li>
 	<li><b>10.2022</b> Two papers accepted at BMVC 2022. Details below.</li>
     <li><b>12.2021</b> I will be starting my own research group within the 3AI project of  <a href="https://hessian.ai" target="_blank">hessian.ai</a> at TU Darmstadt.</li>
