--- a/_includes/news.html
+++ b/_includes/news.html
@@ -1,10 +1,11 @@
 <div class="news">
   <ul>
+    <li><b>04.2025</b> The 2nd edition of our workshop on "Explainable Computer Vision" got accepted at ICCV 2025. More details soon.</li> 
   	<li><b>03.2025</b> Our paper <a href="https://arxiv.org/pdf/2407.17929" target="_blank">"Guided Latent Slot Diffusion for Object-Centric Learning"</a>  has been accepted at <a href="https://cvpr2023.thecvf.com/Conferences/2025" target="_blank">CVPR'25</a>.</li> 
-	<li><b>02.2025</b> I started as assistant professor at the Technical University of Darmstadt.</a></li>
+	<li><b>02.2025</b> I started as assistant professor at the Technical University of Darmstadt.</li>
 	<li><b>09.2024</b> Our paper <a href="https://arxiv.org/abs/2407.11910" target="_blank">"Benchmarking the Attribution Quality of Vision Models"</a>  has been accepted at <a href="https://neurips.cc/Conferences/2024" target="_blank">NeurIPS'24</a> Datasets and Benchmarks Track.</li> 
     <li><b>04.2024</b> Our workshop on <a href="https://excv-workshop.github.io/" target="_blank">Explainable Computer Vision: Where are We and Where are We Going?</a> got accepted at ECCV 2024.</li>  
-    <li><b>01.2024</b> I got accepted into the prestigious <a href="https://www.dfg.de/en/research-funding/funding-opportunities/programmes/individual/emmy-noether" target="_blank">Emmy Noether Programme</a>. More details soon.</li>
+    <li><b>01.2024</b> I got accepted into the prestigious <a href="https://www.dfg.de/en/research-funding/funding-opportunities/programmes/individual/emmy-noether" target="_blank">Emmy Noether Programme</a>.</li>
 	<li><b>01.2024</b> I got appointed as independent research group leader at TU Darmstadt.</li>
     <li><b>08.2023</b> Our paper on <a href="https://github.com/visinf/funnybirds-framework" target="_blank">evaluating explainable AI methods</a> has been accepted at <a href="https://iccv2023.thecvf.com" target="_blank">ICCV'23</a> as oral presentation. </li>
 	<!-- 
