--- a/_includes/news.html
+++ b/_includes/news.html
@@ -1,14 +1,19 @@
 <div class="news">
   <ul>
-    <li><b>04.2025</b> The 2nd edition of our workshop on "Explainable Computer Vision" got accepted at ICCV 2025. More details soon.</li> 
+	<li><b>07.2025</b> Our paper on "Removing Cost Volumes from Optical Flow Estimators" has been accepted as oral at <a href="https://iccv.thecvf.com" target="_blank">ICCV 2025</a>!</li>
+	<li><b>07.2025</b> Our paper <a href="https://arxiv.org/pdf/2507.23642" target="_blank">"Efficient Masked Attention Transformer for Few-Shot Classification and Segmentation"</a> has been accepted at <a href="https://www.dagm-gcpr.de/year/2025" target="_blank">GCPR 2025</a>.</li>
+	<li><b>07.2025</b> Our paper on <a href="https://arxiv.org/abs/2509.02545" target="_blank">"Motion-Refined DINOSAUR for Unsupervised Multi-Object Discovery"</a> has been accepted at the Instance-Level Recognition and Generation Workshop at ICCV 2025 </li>	
+    <li><b>06.2025</b> Two papers accepted at <a href="https://iccv.thecvf.com" target="_blank">ICCV 2025</a>.</li>
+	<li><b>06.2025</b> Our paper <a href="https://arxiv.org/pdf/2503.23502" target="_blank">"Boosting Omnidirectional Stereo Matching with a Pre-trained Depth Foundation Model"</a> has been accepted at <a href="https://www.iros25.org/" target="_blank">IROS 2025</a>.</li>
+    <li><b>04.2025</b> The 2nd edition of our workshop on <a href="https://excv-workshop.github.io/" target="_blank">Explainable Computer Vision?</a> got accepted at ICCV 2025. </li> 
   	<li><b>03.2025</b> Our paper <a href="https://arxiv.org/pdf/2407.17929" target="_blank">"Guided Latent Slot Diffusion for Object-Centric Learning"</a>  has been accepted at <a href="https://cvpr2023.thecvf.com/Conferences/2025" target="_blank">CVPR'25</a>.</li> 
 	<li><b>02.2025</b> I started as assistant professor at the Technical University of Darmstadt.</li>
 	<li><b>09.2024</b> Our paper <a href="https://arxiv.org/abs/2407.11910" target="_blank">"Benchmarking the Attribution Quality of Vision Models"</a>  has been accepted at <a href="https://neurips.cc/Conferences/2024" target="_blank">NeurIPS'24</a> Datasets and Benchmarks Track.</li> 
-    <li><b>04.2024</b> Our workshop on <a href="https://excv-workshop.github.io/" target="_blank">Explainable Computer Vision: Where are We and Where are We Going?</a> got accepted at ECCV 2024.</li>  
     <li><b>01.2024</b> I got accepted into the prestigious <a href="https://www.dfg.de/en/research-funding/funding-opportunities/programmes/individual/emmy-noether" target="_blank">Emmy Noether Programme</a>.</li>
+	<!-- 
+	<li><b>04.2024</b> Our workshop on <a href="https://excv-workshop.github.io/" target="_blank">Explainable Computer Vision: Where are We and Where are We Going?</a> got accepted at ECCV 2024.</li>  
 	<li><b>01.2024</b> I got appointed as independent research group leader at TU Darmstadt.</li>
     <li><b>08.2023</b> Our paper on <a href="https://github.com/visinf/funnybirds-framework" target="_blank">evaluating explainable AI methods</a> has been accepted at <a href="https://iccv2023.thecvf.com" target="_blank">ICCV'23</a> as oral presentation. </li>
-	<!-- 
 	<li><b>10.2024</b> [Hiring] I am accepting applications for a open PhD position through ELLIS: <a href="https://ellis.eu/news/ellis-phd-program-call-for-applications-2024" target="_blank">Link to application instructions</a></li>
 	<li><b>07.2023</b> I am looking forward to attend and present our work on "Unsupervised Representation Learning from Videos" and "Accelerating and Assessing Explainable AI Methods in Computer Vision" at the <a href="https://ellisunconference2023.github.io/" target="_blank">2nd ELLIS unConference</a> in Paris.</li>
   	<li><b>04.2023</b> Our paper <a href="https://sites.google.com/view/mint-kp" target="_blank">"Entropy-driven Unsupervised Keypoint Representation Learning in Videos"</a>  has been accepted at <a href="https://icml.cc/Conferences/2023" target="_blank">ICML'23</a> .</li>	
