--- a/_includes/news.html
+++ b/_includes/news.html
@@ -1,6 +1,6 @@
 <div class="news">
   <ul>
-	<li><b>07.2025</b> Our paper on "Removing Cost Volumes from Optical Flow Estimators" has been accepted as oral at <a href="https://iccv.thecvf.com" target="_blank">ICCV 2025</a>!</li>
+	<li><b>07.2025</b> Our paper <a href="https://visinf.github.io/recover/" target="_blank">"Removing Cost Volumes from Optical Flow Estimators"</a>  has been accepted as oral at <a href="https://iccv.thecvf.com" target="_blank">ICCV 2025</a>!</li>
 	<li><b>07.2025</b> Our paper <a href="https://arxiv.org/pdf/2507.23642" target="_blank">"Efficient Masked Attention Transformer for Few-Shot Classification and Segmentation"</a> has been accepted at <a href="https://www.dagm-gcpr.de/year/2025" target="_blank">GCPR 2025</a>.</li>
 	<li><b>07.2025</b> Our paper on <a href="https://arxiv.org/abs/2509.02545" target="_blank">"Motion-Refined DINOSAUR for Unsupervised Multi-Object Discovery"</a> has been accepted at the Instance-Level Recognition and Generation Workshop at ICCV 2025 </li>	
     <li><b>06.2025</b> Two papers accepted at <a href="https://iccv.thecvf.com" target="_blank">ICCV 2025</a>.</li>
